--- a/index.html
+++ b/index.html
@@ -17,15 +17,59 @@
     <!--prima sezione-->
     <div>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
-        <h3> Scritto da <span>The Booleaner</span> </h3>
-        <h3>il 10/10/2020</h3>
+        <div> Scritto da <span id="scritta">The Booleaner</span></div>
+        <div>il 10/10/2020</div>
         <img src="img/tim-1.jpg" alt="tim berners lee">
         <img src="img/tim-2.jpg" alt="tim berners lee">
+        <div>1st Photo: John S. and James L. Knight, by Scott Henrichsen</div>
+        <div>2nd Photo: Wikimjedia, by Paul Clark</div>
     </div>
 
     <!--sezione principale-->
     <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quibusdam eum, maxime sunt inventore minus! Quibusdam sit vero ea fugit saepe sint, amet temporibus vitae enim neque! Unde quam quod omnis, tempore aliquam molestiae aperiam natus harum error eos, cumque quo? Similique, officiis accusantium. Iste quis amet ex odit quam?</p>
+        <p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae aliquid eaque quia eius tempore facilis unde! Optio sit quibusdam quasi vero minima, magni at quis explicabo soluta perferendis necessitatibus iure.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, ratione nobis earum, sit porro harum quia error accusantium id deleniti ipsum ipsa dolorem repudiandae dolor aliquam enim praesentium dignissimos repellendus.</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex nesciunt quasi architecto officiis eveniet assumenda explicabo obcaecati! Assumenda consequuntur illo facere molestiae sunt commodi ducimus! Debitis consequatur cumque sit aspernatur!</li>
+            </ul>
+        </p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Loremipsumdolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsumdolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
+                </tr>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsumdolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
+                </tr>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsumdolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsumdolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
+                </tr>
+            </tfoot>
+        </table>
 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veritatis, repellat autem provident vero qui quod quis expedita ea temporibus ipsum officia! Deserunt facilis suscipit neque autem minima aspernatur ipsam?</p>
     </div>
 
     <!--footer-->
