--- a/index.html
+++ b/index.html
@@ -74,8 +74,14 @@
 
     <!--footer-->
     <div>
-
-    </div>
+        <span>Potrebbe interessarti</span>
+        <div>
+            <img src="img/monitor.jpg" alt="">
+        </div>
+        <div>
+            <img src="img/graph.jpg" alt="">
+        </div>
+     </div>
 
 </body>
 </html>
