--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     <div>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
         <div> Scritto da <span id="scritta">The Booleaner</span></div>
-        <div>il 10/10/2020</div>
+        <span>il 10/10/2020</span>
+        <div>
         <img src="img/tim-1.jpg" alt="tim berners lee">
         <img src="img/tim-2.jpg" alt="tim berners lee">
         <div>1st Photo: John S. and James L. Knight, by Scott Henrichsen</div>
         <div>2nd Photo: Wikimjedia, by Paul Clark</div>
-    </div>
+        </div>
+     </div>
 
     <!--sezione principale-->
     <div>
