ho modificato ma ci sono le righe in mezzo nella tabella

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             </ul>
         </p>
         <table>
-            <thead>
+            <thead id="head-tabella">
                 <tr>
                     <th>Lorem ipsum dolor</th>
                     <th>Loremipsumdolor</th>
                     <th>Lorem ipsum dolor</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
+            <tbody >
+                <tr class="celeste-scuro">
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsumdolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
@@ -56,19 +56,12 @@
                     <td>lorem ipsumdolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
                 </tr>
-                <tr>
+                <tr class="celeste-scuro">
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsumdolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
                 </tr>
             </tbody>
-            <tfoot>
-                <tr>
-                    <td>lorem ipsum dolor</td>
-                    <td>lorem ipsumdolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
-                </tr>
-            </tfoot>
         </table>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veritatis, repellat autem provident vero qui quod quis expedita ea temporibus ipsum officia! Deserunt facilis suscipit neque autem minima aspernatur ipsam?</p>
