--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!--sezione principale-->
     <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quibusdam eum, maxime sunt inventore minus! Quibusdam sit vero ea fugit saepe sint, amet temporibus vitae enim neque! Unde quam quod omnis, tempore aliquam molestiae aperiam natus harum error eos, cumque quo? Similique, officiis accusantium. Iste quis amet ex odit quam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quibusdam eum, maxime sunt <span class="sottolineatura-gialla">lorem inventore minus!</span>  Quibusdam sit vero ea fugit saepe sint, amet temporibus vitae enim neque! Unde quam quod omnis, tempore aliquam molestiae aperiam natus harum error eos, cumque quo? Similique, officiis accusantium. Iste quis amet ex odit quam?</p>
         <p>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae aliquid eaque quia eius tempore facilis unde! Optio sit quibusdam quasi vero minima, magni at quis explicabo soluta perferendis necessitatibus iure.</li>
@@ -64,7 +64,7 @@
             </tbody>
         </table>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veritatis, repellat autem provident vero qui quod quis expedita ea temporibus ipsum officia! Deserunt facilis suscipit neque autem minima aspernatur ipsam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veritatis, repellat autem provident vero qui quod quis expedita ea temporibus ipsum officia! <span class="sottolineatura-gialla">facilis suscipit neque autem minima</span> Deserunt  aspernatur ipsam?</p>
     </div>
 
     <!--footer-->
