--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <!--intestazione-->
     <div id="intestazione">
-        <h1>The Booleaner</h1>
+         <!--<h1>The Booleaner</h1>--> 
+         <img src="img/logo.svg" alt="" id="logo">
     </div>
 
     <!--prima sezione-->
