--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <!--prima sezione-->
     <div>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
+        <div id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</div>
         <div> Scritto da <span id="scritta">The Booleaner</span></div>
-        <span>il 10/10/2020</span>
-        <div>
+        <div>il 10/10/2020</div>
+        <div id="immagini">
         <img src="img/tim-1.jpg" alt="tim berners lee">
         <img src="img/tim-2.jpg" alt="tim berners lee">
         <div>1st Photo: John S. and James L. Knight, by Scott Henrichsen</div>
