--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <!--intestazione-->
     <div id="intestazione">
-         <!--<h1>The Booleaner</h1>--> 
          <img src="img/logo.svg" alt="" id="logo">
     </div>
 
@@ -29,7 +28,7 @@
      </div>
 
     <!--sezione principale-->
-    <div>
+    <div id="sezione-principale">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quibusdam eum, maxime sunt <span class="sottolineatura-gialla">lorem inventore minus!</span>  Quibusdam sit vero ea fugit saepe sint, amet temporibus vitae enim neque! Unde quam quod omnis, tempore aliquam molestiae aperiam natus harum error eos, cumque quo? Similique, officiis accusantium. Iste quis amet ex odit quam?</p>
         <p>
             <ul>
@@ -47,7 +46,7 @@
                 </tr>
             </thead>
             <tbody >
-                <tr class="celeste-scuro">
+                <tr class="riga-body-table">
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsumdolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
@@ -57,7 +56,7 @@
                     <td>lorem ipsumdolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
                 </tr>
-                <tr class="celeste-scuro">
+                <tr class="riga-body-table">
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsumdolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iste suscipit vel error dolorum commodi incidunt, excepturi reprehenderit? Nemo ut dolorum vel, placeat maxime molestias voluptatibus necessitatibus optio delectus numquam!</td>
@@ -70,11 +69,11 @@
 
     <!--footer-->
     <div>
-        <span>Potrebbe interessarti</span>
+        <span id="span-footer">Potrebbero interessarti</span>
         <div>
             <img src="img/monitor.jpg" alt="">
         </div>
-        <div>
+        <div id="ultima-immagine">
             <img src="img/graph.jpg" alt="">
         </div>
      </div>
