scritta nell'attributo alt delle varie immagini

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--intestazione-->
     <div id="intestazione">
-         <img src="img/logo.svg" alt="" id="logo">
+         <img src="img/logo.svg" alt="logo" id="logo">
     </div>
 
     <!--prima sezione-->
@@ -71,10 +71,10 @@
     <div>
         <span id="span-footer">Potrebbero interessarti</span>
         <div>
-            <img src="img/monitor.jpg" alt="">
+            <img src="img/monitor.jpg" alt="monitor">
         </div>
         <div id="ultima-immagine">
-            <img src="img/graph.jpg" alt="">
+            <img src="img/graph.jpg" alt="graph">
         </div>
      </div>
 
