dettagli sui font

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!--prima sezione-->
     <div>
         <div id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</div>
-        <div> Scritto da <span id="scritta">The Booleaner</span></div>
-        <div>il 10/10/2020</div>
+        <div class="informazioni-autore-articolo"> Scritto da <span id="scritta">The Booleaner</span></div>
+        <div class="informazioni-autore-articolo">il 10/10/2020</div>
         <div id="immagini">
         <img src="img/tim-1.jpg" alt="tim berners lee">
         <img src="img/tim-2.jpg" alt="tim berners lee">
