ho aggiunto le scritte sulle imamgini in fondo alla pagina

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <!--footer-->
-    <div>
+    <!--<div>
         <span id="span-footer">Potrebbero interessarti</span>
         <div>
             <img src="img/monitor.jpg" alt="monitor">
@@ -79,7 +79,13 @@
         </div>
      </div>
     </div>
-
+-->
+ <!--footer-->
+ <div id="footer">
+    <span id="span-footer">Potrebbero interessarti</span>
+    <div id="bg-img-1">Lorem Ipsum </div>
+    <div id="bg-img-2">Lorem Ipsum</div>
+ </div>
     
 
 </body>
