--- a/index.html
+++ b/index.html
@@ -68,14 +68,10 @@
     </div>
 
     <!--footer-->
-    <div>
+    <div id="footer">
         <span id="span-footer">Potrebbero interessarti</span>
-        <div>
-            <img src="img/monitor.jpg" alt="monitor">
-        </div>
-        <div id="ultima-immagine">
-            <img src="img/graph.jpg" alt="graph">
-        </div>
+        <div id="bg-img-1">Lorem Ipsum </div>
+        <div id="bg-img-2">Lorem Ipsum</div>
      </div>
 
 </body>
