spostate più al centro le scritte sulle immagini in fondo alla pagina

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -83,8 +83,8 @@
  <!--footer-->
  <div id="footer">
     <span id="span-footer">Potrebbero interessarti</span>
-    <div id="bg-img-1">Lorem Ipsum </div>
-    <div id="bg-img-2">Lorem Ipsum</div>
+    <div id="bg-img-1">Lorem Ipsum Dolor</div>
+    <div id="bg-img-2">Lorem Ipsum Dolor</div>
  </div>
     
 
